add adaptation for modal

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay">
+    <div class="modal-overlay is-open">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="modal-close-icon" width="8" height="8">
@@ -543,9 +543,10 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-
-              <a class="form-link" href="#">Privacy Policy</a>
+              <span class="label-text">
+                I accept the terms and conditions of the
+                <a class="form-link" href="#">Privacy Policy</a>
+              </span>
             </label>
           </div>
           <button class="main-button" type="submit">Send</button>
