--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 info@devstudio.com
               </a>
             </li>
+
             <li class="address-list-item">
               <a class="address-email nav-link" href="tel:+110001111111">
                 +11 (000) 111-11-11
@@ -469,7 +470,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="modal-close-icon" width="8" height="8">
