adaptation for img and section four

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-9.jpg"
+                srcset="./images/img-8-min.png 2x"
                 alt="Mark Guerrero"
                 class="section-th-img"
               />
@@ -177,6 +178,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-8.jpg"
+                srcset="./images/img-7-min.png 2x"
                 alt="Tom Ford"
                 class="section-th-img"
               />
@@ -218,6 +220,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-7.jpg"
+                srcset="./images/img-6-min.png 2x"
                 alt="Camila Garcia"
                 class="section-th-img"
               />
@@ -259,6 +262,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-6.jpg"
+                srcset="./images/img-5-min.png 2x"
                 alt="Daniel Wilson"
                 class="section-th-img"
               />
@@ -307,7 +311,12 @@
           <ul class="section-fr-ul">
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img src="./images/img-5.jpg" alt="Banking App" width="360" />
+                <img
+                  src="./images/img-5.jpg"
+                  srcset="./images/img-4-min.png 2x"
+                  alt="Banking App"
+                  width="360"
+                />
                 <p class="ovrlay-text">
                   - 14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -324,6 +333,7 @@
                 <img
                   src="./images/img-4.jpg"
                   alt="Cashless Payment"
+                  srcset="./images/img-3-4-min.png 2x"
                   width="360"
                 />
                 <p class="ovrlay-text">
@@ -341,6 +351,7 @@
               <div class="position-ovrlay">
                 <img
                   src="./images/img-3.jpg"
+                  srcset="./images/img-3-min.png 2x"
                   alt="Meditation App"
                   width="360"
                 />
@@ -357,7 +368,12 @@
             </li>
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img src="./images/img-2.jpg" alt="Taxi Service" width="360" />
+                <img
+                  src="./images/img-2.jpg"
+                  srcset="./images/img-2-min.png 2x"
+                  alt="Taxi Service"
+                  width="360"
+                />
                 <p class="ovrlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -373,6 +389,7 @@
               <div class="position-ovrlay">
                 <img
                   src="./images/img-1.jpg"
+                  srcset="./images/img-1-min.png 2x"
                   alt="Screen Illustrations"
                   width="360"
                 />
@@ -389,7 +406,12 @@
             </li>
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img src="./images/img.jpg" alt="Online Courses" width="360" />
+                <img
+                  src="./images/img.jpg"
+                  srcset="./images/img-min.png 2x"
+                  alt="Online Courses"
+                  width="360"
+                />
                 <p class="ovrlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
