--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@
       <div class="container">
         <div class="footer-logo-div">
           <a class="footer-logo" href="./index.html"
-            >Web<span class="footer-logo-web">Studio</span></a
-          >
+            >Web<span class="footer-logo-web">Studio</span>
+          </a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
