last photo update

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-9.jpg"
-                srcset="./images/img-8-min.png 2x"
+                srcset="./images/img-min.jpg 2x"
                 alt="Mark Guerrero"
                 class="section-th-img"
               />
@@ -178,7 +178,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-8.jpg"
-                srcset="./images/img-7-min.png 2x"
+                srcset="./images/img-1-min.jpg 2x"
                 alt="Tom Ford"
                 class="section-th-img"
               />
@@ -220,7 +220,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-7.jpg"
-                srcset="./images/img-6-min.png 2x"
+                srcset="./images/img-2-min.jpg 2x"
                 alt="Camila Garcia"
                 class="section-th-img"
               />
@@ -262,7 +262,7 @@
             <li class="section-th-li">
               <img
                 src="./images/img-6.jpg"
-                srcset="./images/img-5-min.png 2x"
+                srcset="./images/img-3-min.jpg 2x"
                 alt="Daniel Wilson"
                 class="section-th-img"
               />
@@ -311,12 +311,34 @@
           <ul class="section-fr-ul">
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img
-                  src="./images/img-5.jpg"
-                  srcset="./images/img-4-min.png 2x"
-                  alt="Banking App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ../images/imgds-5-min.jpg   1x,
+                      ../images/imgds2x-5-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ../images/imgtb-5-min.jpg   1x,
+                      ../images/imgtb2x-5-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ../images/imgmb-5-min.jpg   1x,
+                      ../images/imgmb2x-5-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../images/imgds-5-min.jpg"
+                    width="360"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="ovrlay-text">
                   - 14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -330,12 +352,34 @@
             </li>
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img
-                  src="./images/img-4.jpg"
-                  alt="Cashless Payment"
-                  srcset="./images/img-3-4-min.png 2x"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ../images/imgds-4-min.jpg   1x,
+                      ../images/imgds2x-4-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ../images/imgtb-4-min.jpg   1x,
+                      ../images/imgtb2x-4-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ../images/imgmb-4-min.jpg   1x,
+                      ../images/imgmb2x-4-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../images/imgds-4-min.jpg"
+                    width="360"
+                    alt="Cashless Payment"
+                  />
+                </picture>
                 <p class="ovrlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -349,12 +393,34 @@
             </li>
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img
-                  src="./images/img-3.jpg"
-                  srcset="./images/img-3-min.png 2x"
-                  alt="Meditation App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ../images/imgds-3-min.jpg   1x,
+                      ../images/imgds2x-3-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ../images/imgtb-3-min.jpg   1x,
+                      ../images/imgtb2x-3-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ../images/imgmb-3-min.jpg   1x,
+                      ../images/imgmb2x-3-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../images/imgds-3-min.jpg"
+                    width="360"
+                    alt="Meditation App"
+                  />
+                </picture>
                 <p class="ovrlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -368,12 +434,34 @@
             </li>
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img
-                  src="./images/img-2.jpg"
-                  srcset="./images/img-2-min.png 2x"
-                  alt="Taxi Service"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ../images/imgds-2-min.jpg   1x,
+                      ../images/imgds2x-2-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ../images/imgtb-2-min.jpg   1x,
+                      ../images/imgtb2x-2-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ../images/imgmb-2-min.jpg   1x,
+                      ../images/imgmb2x-2-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../images/imgds-2-min.jpg"
+                    width="360"
+                    alt="Taxi Service"
+                  />
+                </picture>
                 <p class="ovrlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -387,12 +475,34 @@
             </li>
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img
-                  src="./images/img-1.jpg"
-                  srcset="./images/img-1-min.png 2x"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ../images/imgds-1-min.jpg   1x,
+                      ../images/imgds2x-1-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ../images/imgtb-1-min.jpg   1x,
+                      ../images/imgtb2x-1-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ../images/imgmb-1-min.jpg   1x,
+                      ../images/imgmb2x-1-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../images/imgds-1-min.jpg"
+                    width="360"
+                    alt="Screen Illustrations"
+                  />
+                </picture>
                 <p class="ovrlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -406,12 +516,34 @@
             </li>
             <li class="section-fr-li">
               <div class="position-ovrlay">
-                <img
-                  src="./images/img.jpg"
-                  srcset="./images/img-min.png 2x"
-                  alt="Online Courses"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      ../images/imgds-min.jpg   1x,
+                      ../images/imgds2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ../images/imgtb-min.jpg   1x,
+                      ../images/imgtb2x-min.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ../images/imgmb-min.jpg   1x,
+                      ../images/imgmb2x-min.jpg 2x
+                    "
+                  />
+                  <img
+                    src="../images/imgds-min.jpg"
+                    width="360"
+                    alt="Online Courses"
+                  />
+                </picture>
                 <p class="ovrlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
