--- a/index.html
+++ b/index.html
@@ -315,26 +315,26 @@
                   <source
                     media="(min-width: 1200px)"
                     srcset="
-                      ../images/imgds-5-min.jpg   1x,
-                      ../images/imgds2x-5-min.jpg 2x
+                      images/imgds-5-min.jpg   1x,
+                      images/imgds2x-5-min.jpg 2x
                     "
                   />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ../images/imgtb-5-min.jpg   1x,
-                      ../images/imgtb2x-5-min.jpg 2x
+                      images/imgtb-5-min.jpg   1x,
+                      images/imgtb2x-5-min.jpg 2x
                     "
                   />
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      ../images/imgmb-5-min.jpg   1x,
-                      ../images/imgmb2x-5-min.jpg 2x
+                      images/imgmb-5-min.jpg   1x,
+                      images/imgmb2x-5-min.jpg 2x
                     "
                   />
                   <img
-                    src="../images/imgds-5-min.jpg"
+                    src="images/imgds-5-min.jpg"
                     width="360"
                     alt="Banking App"
                   />
@@ -356,26 +356,26 @@
                   <source
                     media="(min-width: 1200px)"
                     srcset="
-                      ../images/imgds-4-min.jpg   1x,
-                      ../images/imgds2x-4-min.jpg 2x
+                      images/imgds-4-min.jpg   1x,
+                      images/imgds2x-4-min.jpg 2x
                     "
                   />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ../images/imgtb-4-min.jpg   1x,
-                      ../images/imgtb2x-4-min.jpg 2x
+                      images/imgtb-4-min.jpg   1x,
+                      images/imgtb2x-4-min.jpg 2x
                     "
                   />
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      ../images/imgmb-4-min.jpg   1x,
-                      ../images/imgmb2x-4-min.jpg 2x
+                      images/imgmb-4-min.jpg   1x,
+                      images/imgmb2x-4-min.jpg 2x
                     "
                   />
                   <img
-                    src="../images/imgds-4-min.jpg"
+                    src="images/imgds-4-min.jpg"
                     width="360"
                     alt="Cashless Payment"
                   />
@@ -397,26 +397,26 @@
                   <source
                     media="(min-width: 1200px)"
                     srcset="
-                      ../images/imgds-3-min.jpg   1x,
-                      ../images/imgds2x-3-min.jpg 2x
+                      images/imgds-3-min.jpg   1x,
+                      images/imgds2x-3-min.jpg 2x
                     "
                   />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ../images/imgtb-3-min.jpg   1x,
-                      ../images/imgtb2x-3-min.jpg 2x
+                      images/imgtb-3-min.jpg   1x,
+                      images/imgtb2x-3-min.jpg 2x
                     "
                   />
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      ../images/imgmb-3-min.jpg   1x,
-                      ../images/imgmb2x-3-min.jpg 2x
+                      images/imgmb-3-min.jpg   1x,
+                      images/imgmb2x-3-min.jpg 2x
                     "
                   />
                   <img
-                    src="../images/imgds-3-min.jpg"
+                    src="images/imgds-3-min.jpg"
                     width="360"
                     alt="Meditation App"
                   />
@@ -438,26 +438,26 @@
                   <source
                     media="(min-width: 1200px)"
                     srcset="
-                      ../images/imgds-2-min.jpg   1x,
-                      ../images/imgds2x-2-min.jpg 2x
+                      images/imgds-2-min.jpg   1x,
+                      images/imgds2x-2-min.jpg 2x
                     "
                   />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ../images/imgtb-2-min.jpg   1x,
-                      ../images/imgtb2x-2-min.jpg 2x
+                      images/imgtb-2-min.jpg   1x,
+                      images/imgtb2x-2-min.jpg 2x
                     "
                   />
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      ../images/imgmb-2-min.jpg   1x,
-                      ../images/imgmb2x-2-min.jpg 2x
+                      images/imgmb-2-min.jpg   1x,
+                      images/imgmb2x-2-min.jpg 2x
                     "
                   />
                   <img
-                    src="../images/imgds-2-min.jpg"
+                    src="images/imgds-2-min.jpg"
                     width="360"
                     alt="Taxi Service"
                   />
@@ -479,26 +479,26 @@
                   <source
                     media="(min-width: 1200px)"
                     srcset="
-                      ../images/imgds-1-min.jpg   1x,
-                      ../images/imgds2x-1-min.jpg 2x
+                      images/imgds-1-min.jpg   1x,
+                      images/imgds2x-1-min.jpg 2x
                     "
                   />
                   <source
                     media="(min-width: 768px)"
                     srcset="
-                      ../images/imgtb-1-min.jpg   1x,
-                      ../images/imgtb2x-1-min.jpg 2x
+                      images/imgtb-1-min.jpg   1x,
+                      images/imgtb2x-1-min.jpg 2x
                     "
                   />
                   <source
                     media="(max-width: 767px)"
                     srcset="
-                      ../images/imgmb-1-min.jpg   1x,
-                      ../images/imgmb2x-1-min.jpg 2x
+                      images/imgmb-1-min.jpg   1x,
+                      images/imgmb2x-1-min.jpg 2x
                     "
                   />
                   <img
-                    src="../images/imgds-1-min.jpg"
+                    src="images/imgds-1-min.jpg"
                     width="360"
                     alt="Screen Illustrations"
                   />
@@ -519,27 +519,18 @@
                 <picture>
                   <source
                     media="(min-width: 1200px)"
-                    srcset="
-                      ../images/imgds-min.jpg   1x,
-                      ../images/imgds2x-min.jpg 2x
-                    "
+                    srcset="images/imgds-min.jpg 1x, images/imgds2x-min.jpg 2x"
                   />
                   <source
                     media="(min-width: 768px)"
-                    srcset="
-                      ../images/imgtb-min.jpg   1x,
-                      ../images/imgtb2x-min.jpg 2x
-                    "
+                    srcset="images/imgtb-min.jpg 1x, images/imgtb2x-min.jpg 2x"
                   />
                   <source
                     media="(max-width: 767px)"
-                    srcset="
-                      ../images/imgmb-min.jpg   1x,
-                      ../images/imgmb2x-min.jpg 2x
-                    "
+                    srcset="images/imgmb-min.jpg 1x, images/imgmb2x-min.jpg 2x"
                   />
                   <img
-                    src="../images/imgds-min.jpg"
+                    src="images/imgds-min.jpg"
                     width="360"
                     alt="Online Courses"
                   />
